cluster/manifests/mimir/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-distributor
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: distributor
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-querier
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: querier
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-query-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: query-frontend
  mtls:
    mode: STRICT
  portLevelMtls:
    "9095":
      mode: PERMISSIVE # querier
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-query-scheduler
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: query-scheduler
  mtls:
    mode: STRICT
  portLevelMtls:
    "9095":
      mode: PERMISSIVE # querier,query-frontend
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-compactor
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: compactor
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-store-gateway
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: store-gateway
  mtls:
    mode: STRICT
  portLevelMtls:
    "9095":
      mode: PERMISSIVE # querier
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-ingester
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: ingester
  mtls:
    mode: STRICT
  portLevelMtls:
    "9095":
      mode: PERMISSIVE # distributor,querier
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-alertmanager
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: alertmanager
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-ruler
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: ruler
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mimir-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: proxy
  mtls:
    mode: STRICT
