cluster/manifests/mimir/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mimir
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mimir
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mimir
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mimir-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: proxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus-adapter
              app.kubernetes.io/component: ""
        - namespaceSelector:
            matchLabels:
              name: vpa
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vpa
              app.kubernetes.io/component: recommender
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mimir-query-frontend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: query-frontend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: promphet
          podSelector:
            matchLabels:
              app.kubernetes.io/name: promphet
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mimir-distributor
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: distributor
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              name: tempo
          podSelector:
            matchLabels:
              app.kubernetes.io/name: tempo
              app.kubernetes.io/component: metrics-generator
      ports:
        - protocol: TCP
          port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mimir-aleretmanager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: alertmanager
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: loki
          podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
              app.kubernetes.io/component: ruler
        - namespaceSelector:
            matchLabels:
              name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
              app.kubernetes.io/component: ""
        - namespaceSelector:
            matchLabels:
              name: loganomaly
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudevents-alertmanager
      ports:
        - protocol: TCP
          port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mimir-kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: mimir-ingest
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mimir
      ports:
        - protocol: TCP
          port: 9092
    - from:
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              strimzi.io/cluster: mimir-ingest
    - from:
        - namespaceSelector:
            matchLabels:
              name: strimzi-cluster-operator
      ports:
        - protocol: TCP
          port: 9090
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 9404
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mimir-minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: minio
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mimir
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mimir
              app.kubernetes.io/component: mc
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mimir-mcrouter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: mcrouter
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mimir
      ports:
        - protocol: TCP
          port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mimir-etcd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/component: etcd
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mimir
      ports:
        - protocol: TCP
          port: 2379
